# schrodinger_solver

./: .gitignore  CMakeLists.txt  README.md  main.py  pyproject.toml
include/: IntegralMC.h  Integrale.h  RandomGen.h  diff_eq.h  functions.h  potentials.h  solver.h
old_headers/: FunzioniArray.cpp  FunzioniVectorTemplate.h  FunzioniVettore.cpp  Prisma.cpp  Prisma.h  README.txt  VectorOperations.h  makefile  tricks.cpp
old_headers/Classi Particella/: CampoVettoriale.cpp  CampoVettoriale.h  Particella.cpp  Particella.h  Posizione.cpp  Posizione.h  PuntoMateriale.cpp  PuntoMateriale.h  makefile
old_headers/Eq Differenziali/: EqDiffBase.cpp  EqDiffBase.h  FunzioneVettoriale.h
old_headers/Esame Anna/: AlgoZeri.cpp  AlgoZeri.h  Funzione.cpp  Funzione.h  Integral.h  IntegraleMC.cpp  IntegraleMC.h  RandomGen.cpp  compito  compito.cpp  install_root.sh  makefile
old_headers/Esame Anna/Correzione/: Funzione.cpp  Funzione.h  FunzioneIntegrale.cpp  FunzioneIntegrale.h  Integral.cpp  Integral.h  RandomGen.h  VectorAlgebra.h  compito.cpp  makefile
old_headers/Grafici ROOT/: TF1.cpp  TGraph.cpp  histo.cpp
old_headers/Int Montecarlo/: RandomGen.cpp
old_headers/Quadratura Numerica/: FunzioneBase.cpp  FunzioneBase.h  Solutore.cpp  Solutore.h
old_headers/esame eq diff/: EquazioniDifferenziali.h  Funzioni.h  main (1).cpp
src/: IntegralMC.cpp  Integrale.cpp  diff_eq.cc  functions.cc  potentials.cc  solver.cc
